--- a/summary.html
+++ b/summary.html
@@ -588,7 +588,7 @@ Extracted: data/20260216054500.gkg.csv</span></pre>
 </section>
 
 <footer>
-  Generated from <strong>newsfresh vv0.1.0-beta.2</strong> &mdash; all outputs validated against <code>20260216054500.gkg.csv</code> (724 records)
+  Generated from <strong>newsfresh v0.1.0-beta.2</strong> &mdash; all outputs validated against <code>20260216054500.gkg.csv</code> (724 records)
 </footer>
 
 </body>
